@@ -1,5 +1,7 @@
 23.0.12
 ------
+(RB=1386162)
+Fixed bug in ObjectIterator when using PRE_ORDER iteration order.
 
 
 23.0.11
